app/src/db/repositories/worte_audio/snapshots/anki_sentences__db__repositories__worte_audio__worte_audio_test__test_worte_audio_repo__bulk_insert__run_bulk_insert_update_scenario-2.snap
---
source: app/src/db/repositories/worte_audio/worte_audio_test.rs
expression: res_2
---
[
    Snapshot {
        wort_id: 1,
        audio_name_es: Some(
            "12345_es.mp4",
        ),
        audio_name_de: Some(
            "12345_de.mp4",
        ),
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
    Snapshot {
        wort_id: 2,
        audio_name_es: Some(
            "abcde_es.mp4",
        ),
        audio_name_de: Some(
            "abcde_de.mp4",
        ),
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
]
