app/src/db/repositories/worte_audio/snapshots/anki_sentences__db__repositories__worte_audio__worte_audio_test__test_worte_audio_repo__bulk_insert__run_bulk_insert_update_scenario-3.snap
---
source: app/src/db/repositories/worte_audio/worte_audio_test.rs
expression: res_2
---
[
    Snapshot {
        wort_id: 1,
        file_path: "12345.mp4",
        voice_id: "voice_99",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
    Snapshot {
        wort_id: 2,
        file_path: "abcde.mp4",
        voice_id: "voice_100",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
]
